# telepathy-qt

./: CMakeLists.txt
TelepathyQt/: CMakeLists.txt  base-channel-internal.h  base-channel.cpp  base-channel.h  base-connection-internal.h  base-connection.cpp  base-connection.h  channel.xml  service-types.h  svc-channel.xml
TelepathyQt/Farsight/: CMakeLists.txt
TelepathyQt/Farstream/: CMakeLists.txt
cmake/modules/: FindQt5.cmake
debian/: changelog  control  gbp.conf  rules
examples/accounts/: CMakeLists.txt
examples/cm/: CMakeLists.txt
examples/contact-messenger/: CMakeLists.txt
examples/extensions/: CMakeLists.txt
examples/file-transfer/: CMakeLists.txt
examples/protocols/: CMakeLists.txt
examples/roster/: CMakeLists.txt
examples/stream-tubes/: CMakeLists.txt
tests/lib/: CMakeLists.txt
tests/lib/glib-helpers/: CMakeLists.txt
